--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "contracts"
   ],
   "dependencies": {
-    "@uniswap/lib": "1.1.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@uniswap/lib": "*",
     "@uniswap/v2-core": "^1.0.1",
+    "solidity-coverage": "^0.7.16",
     "truffle-hdwallet-provider": "^1.0.17",
     "truffle-plugin-verify": "^0.4.0"
   },
@@ -26,6 +31,7 @@
     "chai": "^4.2.0",
     "ethereum-waffle": "^2.4.1",
     "ethereumjs-util": "^6.2.0",
+    "hardhat": "^2.2.1",
     "mocha": "^6.2.2",
     "ncp": "^2.0.0",
     "prettier": "^1.19.1",
